--- a/app/src/main/res/layout/content_create_note.xml
+++ b/app/src/main/res/layout/content_create_note.xml
@@ -12,12 +12,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="11dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Title" />
+        android:hint="Title"
+        android:inputType="textPersonName" />
 
     <MultiAutoCompleteTextView
         android:id="@+id/note_description_edit_text"
@@ -25,9 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/note_title_editText"
         android:layout_below="@+id/note_title_editText"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="37dp"
-        android:hint="Description"
-        android:layout_marginEnd="16dp"/>
+        android:hint="Description" />
 
     <Button
         android:id="@+id/save_note_button"
@@ -44,6 +44,18 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/save_note_button"
         android:layout_below="@+id/save_note_button"
-        android:text="Delete"
-        android:visibility="invisible"/>
+        android:text="attach"
+        android:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/note_imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/delete_note_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:scaleType="centerCrop"/>
 </RelativeLayout>
